--- a/ansible/roles/horizon-client/tasks/main.yml
+++ b/ansible/roles/horizon-client/tasks/main.yml
@@ -1,7 +1,7 @@
 ---
-- name: Update fact to AdobeAcrobatReaderDC
+- name: Update fact to VMwareHorizonClient
   set_fact:
-    app_name: AdobeAcrobatReaderDC
+    app_name: VMwareHorizonClient
 
 - name: "Collect Evergreen info for {{ app_name }}"
   win_uri:
@@ -13,11 +13,11 @@
 
 - name: "Set Evergreen object for {{ app_name }}"
   set_fact:
-    app_details: "{{ app.json | json_query('[?Architecture == `x64` && Language == `MUI`]') | first }}"
+    app_details: "{{ app.json | json_query('[?Type == `exe`]') | first }}"
 
 - name: "Install {{ app_name }}"
   win_package:
     path: "{{ app_details.URI }}"
-    arguments: /sAll /rs /msi EULA_ACCEPT=YES
+    arguments: /install /silent /norestart
     expected_return_code: [0, 3, 3010]
     state: present
