--- a/ansible/vars/accounts.yml
+++ b/ansible/vars/accounts.yml
@@ -4,3 +4,7 @@ loadgen: "{{ hostvars['localhost']['loadgen'] }}"
 loadgen_bot: "{{ hostvars['localhost']['loadgen_bot'] }}"
 sql_agt: "{{ hostvars['localhost']['sql_agt'] }}"
 sql_svc: "{{ hostvars['localhost']['sql_svc'] }}"
+vsphere_password: "{{ hostvars['localhost']['vsphere_password'] }}"
+vsphere_username: "{{ hostvars['localhost']['vsphere_username'] }}"
+vsphere_host: "{{ hostvars['localhost']['vsphere_host'] }}"
+influx_token: "{{ hostvars['localhost']['influx_token'] }}"
