--- a/ansible/vars/ansible.yml
+++ b/ansible/vars/ansible.yml
@@ -3,3 +3,4 @@ ansible_connection: winrm
 ansible_winrm_transport: ntlm
 ansible_winrm_server_cert_validation: ignore
 ansible_port: 5985
+ansible_winrm_read_timeout_sec: 300
