--- a/ansible/rdgateway.yml
+++ b/ansible/rdgateway.yml
@@ -1,25 +1,40 @@
 ---
-# - hosts: localhost
-#   connection: local
-#   gather_facts: yes
-#   collections:
-#     - azure.azcollection
+- hosts: localhost
+  connection: local
+  gather_facts: yes
+  tasks:
+  - name: Install requirements
+    include_tasks: vault.yml
 
-#   tasks:
-#   - name: Start the Azure Key Vault actions
-#     include_tasks: azure-keyvault.yml
-
-- name: RDGateway Server
-  hosts: rdgw
+- name: Domain join the RD Gateway
+  hosts: rd_gateway
   roles:
-  - domain-join
-  - remote-gateway
+    - domain-join
+  vars_files:
+    - ansible.yml
+    - local.yml
   vars:
-    dns_domain_name: 'GO.EUC'
-    domain_name: GO
-    domain_controller: "{{ groups['dc'][0] }}"
-    domain_admin_user: "GO\\{{ ansible_user }}"
-    ansible_connection: winrm
-    ansible_winrm_transport: ntlm
-    ansible_winrm_server_cert_validation: ignore
-    ansible_port: 5985
+    ou_path: "OU=Infra,OU=Machines,OU=GO"
+
+- name: Install and configure the Gateway
+  hosts: rd_gateway
+  roles:
+    - remote-gateway
+  vars_files:
+    - ansible.yml
+    - domain.yml
+
+# - name: RDGateway Server
+#   hosts: rdgw
+#   roles:
+#   - domain-join
+#   - remote-gateway
+#   vars:
+#     dns_domain_name: 'GO.EUC'
+#     domain_name: GO
+#     domain_controller: "{{ groups['dc'][0] }}"
+#     domain_admin_user: "GO\\{{ ansible_user }}"
+#     ansible_connection: winrm
+#     ansible_winrm_transport: ntlm
+#     ansible_winrm_server_cert_validation: ignore
+#     ansible_port: 5985
