--- a/ansible/roles/citrix-receiver/tasks/main.yml
+++ b/ansible/roles/citrix-receiver/tasks/main.yml
@@ -15,7 +15,7 @@
   set_fact:
     app_details: "{{ app.json | json_query('[?Stream == `Current`]') | first }}"
 
-- name: "Install {{ app_details.Title }} {{ app_details.Version }}"
+- name: "Install {{ app_name }}"
   win_package:
     path: "{{ app_details.URI }}"
     arguments: /silent /noreboot /AutoUpdateCheck=disabled
