--- a/ansible/roles/loadgen/tasks/main.yml
+++ b/ansible/roles/loadgen/tasks/main.yml
@@ -64,7 +64,7 @@
 
 - name: Download LoadGen Director
   win_get_url:
-    url: "https://download.loadgen.cloud/loadgen/{{ loadgen.version }}/LoadGenDirector.txt"
+    url: "https://download.loadgen.cloud/loadgen/9411/LoadGenDirector.txt"
     dest: C:\ProgramData\LoadGen\Download\Director\AutoUpdate.dat
   when: loadgen_director.stat.exists == False
 
@@ -85,7 +85,7 @@
 
 - name: Download LoadGen Studio
   win_get_url:
-    url: "https://download.loadgen.cloud/loadgen/{{ loadgen.version }}/LoadGenStudio.txt"
+    url: "https://download.loadgen.cloud/loadgen/9411/LoadGenStudio.txt"
     dest: C:\ProgramData\LoadGen\Download\Studio\AutoUpdate.dat
   when: loadgen_studio.stat.exists == False
 
@@ -106,7 +106,7 @@
 
 - name: Download LoadGen Analyzer
   win_get_url:
-    url: "https://download.loadgen.cloud/loadgen/{{ loadgen.version }}/LoadGenAnalyzer.txt"
+    url: "https://download.loadgen.cloud/loadgen/9411/LoadGenAnalyzer.txt"
     dest: C:\ProgramData\LoadGen\Download\Analyzer\AutoUpdate.dat
   when: loadgen_analyzer.stat.exists == False
 
@@ -143,11 +143,11 @@
     url: https://github.com/GO-EUC/go-euc-workloads/raw/master/KnowledgeWorker_v2110.1.lgs
     dest: C:\ProgramData\LoadGen
 
-- name: Configure the LoadGen Datasource
-  include_tasks: datasource.yml
+# - name: Configure the LoadGen Datasource
+#   include_tasks: datasource.yml
 
-- name: Configure the LoadGen Options
-  include_tasks: options.yml
+# - name: Configure the LoadGen Options
+#   include_tasks: options.yml
 
-- name: Configure the LoadGen RunAsProfiles
-  include_tasks: profiles.yml
+# - name: Configure the LoadGen RunAsProfiles
+#   include_tasks: profiles.yml
