--- a/ansible/roles/remote-gateway/tasks/main.yml
+++ b/ansible/roles/remote-gateway/tasks/main.yml
@@ -1,8 +1,8 @@
 ---
-- name: Built the environment dictonary and variables
-  set_fact:
-    certificate_file: "{{ lookup('env', 'cert_file') }}"
-    certificate_password: "{{ lookup('env', 'cert_password') }}"
+# - name: Built the environment dictonary and variables
+#   set_fact:
+#     certificate_file: "{{ lookup('env', 'cert_file') }}"
+#     certificate_password: "{{ lookup('env', 'cert_password') }}"
 
 - name: Install Remote Desktop Gateway
   ansible.windows.win_feature:
@@ -11,69 +11,69 @@
     include_sub_features: true
     include_management_tools: true
 
-- name: Create directory structure
-  ansible.windows.win_file:
-    path: C:\Certs
-    state: directory
+# - name: Create directory structure
+#   ansible.windows.win_file:
+#     path: C:\Certs
+#     state: directory
 
-- name: Copy a single file
-  ansible.windows.win_copy:
-    src: '{{ certificate_file }}'
-    dest: C:\Certs\cert.pfx
-    force: true
+# - name: Copy a single file
+#   ansible.windows.win_copy:
+#     src: '{{ certificate_file }}'
+#     dest: C:\Certs\cert.pfx
+#     force: true
 
-- name: Import pfx wildcard certificate
-  ansible.windows.win_certificate_store:
-    path: C:\Certs\cert.pfx
-    state: present
-    password: '{{ certificate_password }}'
-  register: cert_import
+# - name: Import pfx wildcard certificate
+#   ansible.windows.win_certificate_store:
+#     path: C:\Certs\cert.pfx
+#     state: present
+#     password: '{{ certificate_password }}'
+#   register: cert_import
 
-- name: Firewall rule to allow HTTPS on TCP port 443
-  community.windows.win_firewall_rule:
-    name: Remote Desktop Gateway
-    localport: 443
-    action: allow
-    direction: in
-    protocol: tcp
-    profiles: [domain, private, public]
-    state: present
-    enabled: true
+# - name: Firewall rule to allow HTTPS on TCP port 443
+#   community.windows.win_firewall_rule:
+#     name: Remote Desktop Gateway
+#     localport: 443
+#     action: allow
+#     direction: in
+#     protocol: tcp
+#     profiles: [domain, private, public]
+#     state: present
+#     enabled: true
 
-- name: Debug
-  ansible.builtin.debug:
-    msg: '{{ cert_import.thumbprints | last }}'
+# - name: Debug
+#   ansible.builtin.debug:
+#     msg: '{{ cert_import.thumbprints | last }}'
 
-- name: Configure the Remote Desktop Gateway
-  community.windows.win_rds_settings:
-    certificate_hash: '{{ cert_import.thumbprints | last }}'
-    max_connections: 10
+# - name: Configure the Remote Desktop Gateway
+#   community.windows.win_rds_settings:
+#     certificate_hash: '{{ cert_import.thumbprints | last }}'
+#     max_connections: 10
 
-- name: Create a new RDS CAP with a 30 minutes timeout and clipboard redirection enabled
-  community.windows.win_rds_cap:
-    name: Remote Gateway CAP
-    user_groups:
-      - '{{ domain_name }}\RD Gateway Users'
-    session_timeout: 120
-    session_timeout_action: disconnect
-    allow_only_sdrts_servers: true
-    redirect_clipboard: true
-    redirect_drives: false
-    redirect_printers: false
-    redirect_serial: false
-    redirect_pnp: false
-    state: enabled
+# - name: Create a new RDS CAP with a 30 minutes timeout and clipboard redirection enabled
+#   community.windows.win_rds_cap:
+#     name: Remote Gateway CAP
+#     user_groups:
+#       - '{{ domain_name }}\RD Gateway Users'
+#     session_timeout: 120
+#     session_timeout_action: disconnect
+#     allow_only_sdrts_servers: true
+#     redirect_clipboard: true
+#     redirect_drives: false
+#     redirect_printers: false
+#     redirect_serial: false
+#     redirect_pnp: false
+#     state: enabled
 
-- name: Create a new RDS RAP
-  community.windows.win_rds_rap:
-    name: Remote Gateway RAP
-    description: Allow all users to connect to any resource through ports 3389
-    user_groups:
-      - 'GO\Domain Admins'
-    computer_group_type: allow_any
-    allowed_ports:
-      - 3389
-    state: enabled
+# - name: Create a new RDS RAP
+#   community.windows.win_rds_rap:
+#     name: Remote Gateway RAP
+#     description: Allow all users to connect to any resource through ports 3389
+#     user_groups:
+#       - 'GO\Domain Admins'
+#     computer_group_type: allow_any
+#     allowed_ports:
+#       - 3389
+#     state: enabled
 
-- name: Reboot the machine to complete
-  ansible.windows.win_reboot:
+# - name: Reboot the machine to complete
+#   ansible.windows.win_reboot:
