Issue is that the IPs are not unique, added a + counter to ensure all images have a unique ip and restored the shutdown commands

--- a/.devops/pipelines/vmware/image.yml
+++ b/.devops/pipelines/vmware/image.yml
@@ -115,7 +115,7 @@ stages:
           $packerVars += "iso_file = `"$($isoFile)`""
           $packerVars += "build_username = `"$($build.data.user)`""
           $packerVars += "build_organization = `"GO-EUC`""
-          $packerVars += "network_address = `"$($build.data.ip)`""
+          $packerVars += "network_address = `"$($build.data.ip) + 1`""
           $packerVars += "network_cidr = `"$($network.data.cidr)`""
           $packerVars += "network_gateway = $($network.data.gateway)"
           $packerVars += "network_dns = $($network.data.dns)"
@@ -185,7 +185,7 @@ stages:
           $packerVars += "iso_file = `"$($isoFile)`""
           $packerVars += "build_username = `"$($build.data.user)`""
           $packerVars += "build_organization = `"GO-EUC`""
-          $packerVars += "network_address = `"$($build.data.ip)`""
+          $packerVars += "network_address = `"$($build.data.ip) + 2`""
           $packerVars += "network_cidr = `"$($network.data.cidr)`""
           $packerVars += "network_gateway = $($network.data.gateway)"
           $packerVars += "network_dns = $($network.data.dns)"
@@ -255,7 +255,7 @@ stages:
           $packerVars += "iso_file = `"$($isoFile)`""
           $packerVars += "build_username = `"$($build.data.user)`""
           $packerVars += "build_organization = `"GO-EUC`""
-          $packerVars += "network_address = `"$($build.data.ip)`""
+          $packerVars += "network_address = `"$($build.data.ip) + 3`""
           $packerVars += "network_cidr = `"$($network.data.cidr)`""
           $packerVars += "network_gateway = $($network.data.gateway)"
           $packerVars += "network_dns = $($network.data.dns)"
@@ -325,7 +325,7 @@ stages:
           $packerVars += "iso_file = `"$($isoFile)`""
           $packerVars += "build_username = `"$($build.data.user)`""
           $packerVars += "build_organization = `"GO-EUC`""
-          $packerVars += "network_address = `"$($build.data.ip)`""
+          $packerVars += "network_address = `"$($build.data.ip) + 4`""
           $packerVars += "network_cidr = `"$($network.data.cidr)`""
           $packerVars += "network_gateway = $($network.data.gateway)"
           $packerVars += "network_dns = $($network.data.dns)"
