--- a/.devops/pipelines/vmware/image.yml
+++ b/.devops/pipelines/vmware/image.yml
@@ -38,6 +38,8 @@ stages:
           $esx = vault kv get -format json -mount=go vmware/esx/infra-1 | ConvertFrom-Json
           $build = vault kv get -format json -mount=go build | ConvertFrom-Json
 
+          $ip = [int]$($build.data.ip)
+
           $packerVars = @()
           $packerVars += "vsphere_username = `"$($vcsa.data.user)`""
           $packerVars += "vsphere_endpoint = `"$($vcsa.data.name).$($domain.data.name)`""
@@ -45,7 +47,7 @@ stages:
           $packerVars += "iso_file = `"$($isoFile)`""
           $packerVars += "build_username = `"$($build.data.user)`""
           $packerVars += "build_organization = `"GO-EUC`""
-          $packerVars += "network_address = `"$($build.data.ip)`""
+          $packerVars += "network_address = `"$ip`""
           $packerVars += "network_cidr = `"$($network.data.cidr)`""
           $packerVars += "network_gateway = $($network.data.gateway)"
           $packerVars += "network_dns = $($network.data.dns)"
@@ -108,6 +110,8 @@ stages:
           $esx = vault kv get -format json -mount=go vmware/esx/infra-1 | ConvertFrom-Json
           $build = vault kv get -format json -mount=go build | ConvertFrom-Json
 
+          $ip = [int]$($build.data.ip) + 1
+
           $packerVars = @()
           $packerVars += "vsphere_username = `"$($vcsa.data.user)`""
           $packerVars += "vsphere_endpoint = `"$($vcsa.data.name).$($domain.data.name)`""
@@ -115,7 +119,7 @@ stages:
           $packerVars += "iso_file = `"$($isoFile)`""
           $packerVars += "build_username = `"$($build.data.user)`""
           $packerVars += "build_organization = `"GO-EUC`""
-          $packerVars += "network_address = `"$($build.data.ip) + 1`""
+          $packerVars += "network_address = `"$ip`""
           $packerVars += "network_cidr = `"$($network.data.cidr)`""
           $packerVars += "network_gateway = $($network.data.gateway)"
           $packerVars += "network_dns = $($network.data.dns)"
@@ -178,6 +182,8 @@ stages:
           $esx = vault kv get -format json -mount=go vmware/esx/infra-1 | ConvertFrom-Json
           $build = vault kv get -format json -mount=go build | ConvertFrom-Json
 
+          $ip = [int]$($build.data.ip) + 2
+
           $packerVars = @()
           $packerVars += "vsphere_username = `"$($vcsa.data.user)`""
           $packerVars += "vsphere_endpoint = `"$($vcsa.data.name).$($domain.data.name)`""
@@ -185,7 +191,7 @@ stages:
           $packerVars += "iso_file = `"$($isoFile)`""
           $packerVars += "build_username = `"$($build.data.user)`""
           $packerVars += "build_organization = `"GO-EUC`""
-          $packerVars += "network_address = `"$($build.data.ip) + 2`""
+          $packerVars += "network_address = `"$ip`""
           $packerVars += "network_cidr = `"$($network.data.cidr)`""
           $packerVars += "network_gateway = $($network.data.gateway)"
           $packerVars += "network_dns = $($network.data.dns)"
@@ -248,6 +254,8 @@ stages:
           $esx = vault kv get -format json -mount=go vmware/esx/infra-1 | ConvertFrom-Json
           $build = vault kv get -format json -mount=go build | ConvertFrom-Json
 
+          $ip = [int]$($build.data.ip) + 3
+
           $packerVars = @()
           $packerVars += "vsphere_username = `"$($vcsa.data.user)`""
           $packerVars += "vsphere_endpoint = `"$($vcsa.data.name).$($domain.data.name)`""
@@ -255,7 +263,7 @@ stages:
           $packerVars += "iso_file = `"$($isoFile)`""
           $packerVars += "build_username = `"$($build.data.user)`""
           $packerVars += "build_organization = `"GO-EUC`""
-          $packerVars += "network_address = `"$($build.data.ip) + 3`""
+          $packerVars += "network_address = `"$ip`""
           $packerVars += "network_cidr = `"$($network.data.cidr)`""
           $packerVars += "network_gateway = $($network.data.gateway)"
           $packerVars += "network_dns = $($network.data.dns)"
@@ -318,6 +326,8 @@ stages:
           $esx = vault kv get -format json -mount=go vmware/esx/infra-1 | ConvertFrom-Json
           $build = vault kv get -format json -mount=go build | ConvertFrom-Json
 
+          $ip = [int]$($build.data.ip) + 4
+
           $packerVars = @()
           $packerVars += "vsphere_username = `"$($vcsa.data.user)`""
           $packerVars += "vsphere_endpoint = `"$($vcsa.data.name).$($domain.data.name)`""
@@ -325,7 +335,7 @@ stages:
           $packerVars += "iso_file = `"$($isoFile)`""
           $packerVars += "build_username = `"$($build.data.user)`""
           $packerVars += "build_organization = `"GO-EUC`""
-          $packerVars += "network_address = `"$($build.data.ip) + 4`""
+          $packerVars += "network_address = `"$ip""
           $packerVars += "network_cidr = `"$($network.data.cidr)`""
           $packerVars += "network_gateway = $($network.data.gateway)"
           $packerVars += "network_dns = $($network.data.dns)"
