--- a/.devops/pipelines/vmware/build.yml
+++ b/.devops/pipelines/vmware/build.yml
@@ -63,7 +63,7 @@ stages:
 
             $tfVars = @()
             $tfVars += "root_path = `"$(Build.Repository.LocalPath)`""
-            $tfVars += "build_name = `"${{ parameters.redeploy }}`""
+            $tfVars += "build_name = `"${{ parameters.build }}`""
             $tfVars += "ansible_playbook = `"ansible/windows-image.yml`""
 
             $tfVars | Set-Content -Path terraform/vmware/build/terraform.tfvars -Force
