Moved to lowercase, otherwise this won't be picked up by ansible

--- a/.devops/pipelines/vmware/build.yml
+++ b/.devops/pipelines/vmware/build.yml
@@ -25,11 +25,12 @@ parameters:
 - name: delivery
   displayName: Delivery Model
   type: string
-  default: Citrix
+  default: citrix
   values:
-  - Citrix
-  - VMware
-  - RDSH
+  - citrix
+  - omnissa
+  - rdsh
+  - parallels
 
 trigger:
 - none
