--- a/ansible/windows-image.yml
+++ b/ansible/windows-image.yml
@@ -31,7 +31,7 @@
   hosts: all
   gather_facts: yes
   roles:
-    # - telegraf
+    - telegraf
     - windows-image
   vars_files:
     - accounts.yml
